Взаимодействие c внешними API. hh.ru api