@@ -6,6 +6,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import ru.safronova.skills.entity.Language;
 import ru.safronova.skills.entity.Programmer;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Controller
@@ -15,7 +16,7 @@ public class WebController {
 
         model.addAttribute("user",
                 new Programmer(1L, "Elena",
-                        List.of(
+                        Arrays.asList(
                                 new Language(1L, "Java", null),
                                 new Language(2L, "Python", null)
                         ), null));
@@ -31,5 +32,10 @@ public class WebController {
     @GetMapping("/create_language")
     public String language(){
         return "language";
+    }
+
+    @GetMapping("/vacancies")
+    public String vacancies(){
+        return "vacancies";
     }
 }
